k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: dido-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: dido-backend

  template:
    metadata:
      labels:
        app: dido-backend

    spec:
      containers:
      - name: backend

        image: swap2502/dido-backend:latest

        ports:
        - containerPort: 5000
