k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: dido-backend-service

spec:
  selector:
    app: dido-backend

  ports:
  - port: 5000
    targetPort: 5000

  type: ClusterIP
