k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: dido-frontend-service

spec:
  selector:
    app: dido-frontend

  ports:
  - port: 3000
    targetPort: 3000

  type: NodePort
